--- a/admin/config.yml
+++ b/admin/config.yml
@@ -1,9 +1,9 @@
 backend:
   name: github
-  repo: adamosx/decap-test # Zastąp poprawną nazwą użytkownika i repozytorium
-  branch: main # Lub master, jeśli taką masz gałąź główną
+  repo: adamosx/decap-test 
+  branch: main 
   auth_type: pkce
-  app_id: Ov23lisxsANoygB2K3I2
+  client_id: 'Ov23lisxsANoygB2K3I2'
 
 media_folder: "media" # Utwórz folder "media" w repozytorium "decap-test"
 
